Fix alignwide

--- a/style.css
+++ b/style.css
@@ -504,12 +504,8 @@ object {
 	max-width: 100%;
 }
 
-.wp-block-audio {
-	min-width: inherit;
-}
-
-.wp-block-audio.alignleft, .wp-block-audio.alignright {
-	min-width: 300px;
+.wp-block-embed {
+	margin: 2rem 0;
 }
 
 button,
@@ -617,6 +613,27 @@ input.has-focus[type="submit"],
     margin-right: -50vw;
 }
 
+.alignwide {
+    max-width: 100vw;
+    margin-left: -140px;
+    margin-right: -140px;
+}
+
+@media only screen and (max-width: 960px) {
+	.alignwide {
+		margin-left: -64px;
+		margin-right: -64px;
+	}
+}
+
+@media only screen and (max-width: 560px) {
+	.alignwide {
+		margin-left: -16px;
+		margin-right: -16px;
+	}
+}
+
+
 h1, h1 a,
 h2, h2 a,
 h3, h3 a,
@@ -705,71 +722,6 @@ dt {
 
 dd {
 	margin: 0 0 0 16px;
-}
-
-.wp-block-pullquote {
-	padding: 48px 0;
-	margin-left: 0;
-	margin-right: 0;
-	text-align: center;
-	border-top-color: #DDDDDD;
-	border-top-width: 4px;
-	border-bottom-color: #DDDDDD;
-	border-bottom-width: 4px;
-	color: #333333;
-}
-
-.wp-block-pullquote p {
-	font-family: var(--blockquote--font);
-	font-size: 1.728rem;
-	letter-spacing: normal;
-	line-height: 1.125;
-}
-
-.wp-block-pullquote a {
-	color: currentColor;
-}
-
-.wp-block-pullquote .wp-block-pullquote__citation,
-.wp-block-pullquote cite,
-.wp-block-pullquote footer {
-	color: #767676;
-	font-size: 0.8rem;
-	letter-spacing: normal;
-	display: block;
-}
-
-.wp-block-pullquote:not(.is-style-solid-color) {
-	background: none;
-}
-
-.wp-block-pullquote.is-style-default.alignleft blockquote > *, .wp-block-pullquote.is-style-default.aligncenter blockquote > *, .wp-block-pullquote.is-style-default.alignright blockquote > * {
-	text-align: center;
-}
-
-.wp-block-pullquote.is-style-solid-color {
-	background-color: var(--color-accent);
-	color: white;
-}
-
-.wp-block-pullquote.is-style-solid-color blockquote {
-	padding-left: 16px;
-	padding-right: 16px;
-	max-width: inherit;
-}
-
-.wp-block-pullquote.is-style-solid-color .wp-block-pullquote__citation,
-.wp-block-pullquote.is-style-solid-color cite,
-.wp-block-pullquote.is-style-solid-color footer {
-	color: currentColor;
-}
-
-.wp-block-pullquote.alignwide > p,
-.wp-block-pullquote.alignfull > p,
-.wp-block-pullquote.alignwide blockquote,
-.wp-block-pullquote.alignfull blockquote {
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .wp-block-quote {
